# cargo-sls-distribution

./: .travis.yml  Cargo.toml  README.md  build_dist.sh  circle.yml
.circleci/: config.yml  no-pie-gcc  publish_dist.rb
src/: check.sh  init.sh  main.rs  serde_types.rs  serde_types.rs.in  shell_escape.rs
test-service/: Cargo.toml
