[package]
name = "cargo-sls-distribution"
version = "0.4.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "A Cargo subcommand which packages a binary crate into a distribution archive"
repository = "https://github.com/sfackler/cargo-sls-distribution"
readme = "README.md"
exclude = ["test-service"]

[dependencies]
cargo = "0.18"
docopt = "0.7"
env_logger = "0.4"
flate2 = "0.2"
git2 = { version = "0.6", default_features = false }
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
shell-escape = "0.1.1"
tar = { version = "0.4", default_features = false }
toml = "0.3"
