[package]
name = "cargo-sls-distribution"
version = "0.4.5"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "A Cargo subcommand which packages a binary crate into a distribution archive"
repository = "https://github.com/sfackler/cargo-sls-distribution"
readme = "README.md"
exclude = ["test-service"]

[dependencies]
docopt = "0.8"
env_logger = "0.5"
failure = "0.1"
flate2 = "1.0"
git2 = { version = "0.6", default_features = false }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shell-escape = "0.1.1"
tar = { version = "0.4", default_features = false }
toml = "0.4"
