[package]
name = "test-service"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
exclude = ["var/data/*"]

[package.metadata.distribution]
group = "com.sfackler.test"
args = ["var/conf/server.yml", "foo bar"]
manifest_extensions = { foo = "bar", fizz = [1, 2, 3] }

[dependencies]
